--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "body-parser": "^1.18.3",
     "connect-session-knex": "^1.4.0",
     "cors": "^2.8.4",
+    "dumper.js": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "knex": "^0.15.2",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "morgan": "^1.9.1",
     "node-cron": "^1.2.1",
     "node-fetch": "^2.2.0",
+    "nodemon": "^1.18.3",
     "objection": "^1.2.2",
     "pdfjs-dist": "^2.0.489",
     "performance-now": "^2.1.0",
     "pg": "^7.4.3",
     "serve-favicon": "^2.5.0",
-    "validator": "^10.5.0",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.18.3",
-    "dumper.js": "^0.1.1"
+    "validator": "^10.5.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
